examples/scenarios/21-var-redeclaration-edge-cases/error-block-shadowing.mncnk
chunk "Main" {
  const x: int = 3;

  if (true) {
    const x: int = 5; // error: redeclaration across nested block in same scope boundary
  };
};
moon(Main);
